# wordninja-enhanced

./: .gitignore  README.md  pyproject.toml  test.py  wordninja.py
Dictionaries/: create_dictionaries.py
Dictionaries/vocab_blacklists_and_additions/: en_blacklist.py  es_additional_words.py  it_additional_words.py
wordninja_enhanced/: __init__.py  wordninja.py
