[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordninja-enhanced"
version = "3.0.0"
description = "Probabilistically split concatenated words. Now with more functionality and languages!"
readme = "README.md"
license = {text="MIT"}
keywords = ["text-processing", "nlp", "language", "segmentation"]
authors = [
  {name = "Tim Lodemann"}
]

[project.urls]
Homepage = "https://github.com/timminator/wordninja-enhanced"
Repository = "https://github.com/timminator/wordninja-enhanced"
Issues = "https://github.com/timminator/wordninja-enhanced/issues"

[tool.setuptools]
packages = ["wordninja_enhanced"]

[tool.setuptools.package-data]
wordninja_enhanced = ["resources/*.gz"]