[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordninja-enhanced"
description = "Probabilistically split concatenated words. Now with more functionality and languages!"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["text-processing", "nlp", "language", "segmentation"]
authors = [{name = "Tim Lodemann"}]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/timminator/wordninja-enhanced"
Repository = "https://github.com/timminator/wordninja-enhanced"
Issues = "https://github.com/timminator/wordninja-enhanced/issues"

[tool.setuptools]
packages = ["wordninja_enhanced"]

[tool.setuptools.package-data]
wordninja_enhanced = ["resources/*.gz"]

[tool.setuptools.dynamic]
version = {attr = "wordninja_enhanced.wordninja.__version__"}