[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordninja-enhanced"
description = "Probabilistically split concatenated words. Now with more functionality and languages!"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["text-processing", "nlp", "language", "segmentation"]
authors = [{name = "Tim Lodemann"}]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/timminator/wordninja-enhanced"
documentation = "https://github.com/timminator/wordninja-enhanced/blob/master/README.md"
Repository = "https://github.com/timminator/wordninja-enhanced.git"
Issues = "https://github.com/timminator/wordninja-enhanced/issues"

[tool.setuptools]
packages = ["wordninja_enhanced"]

[tool.setuptools.package-data]
wordninja_enhanced = ["resources/*.gz"]

[tool.setuptools.dynamic]
version = {attr = "wordninja_enhanced.wordninja.__version__"}
